--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "strapi": "strapi",
     "deploy": "strapi deploy"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.25.7",
-    "@strapi/plugin-users-permissions": "4.25.7",
-    "@strapi/plugin-i18n": "4.25.7",
     "@strapi/plugin-cloud": "4.25.7",
+    "@strapi/plugin-i18n": "4.25.7",
+    "@strapi/plugin-users-permissions": "4.25.7",
+    "@strapi/strapi": "4.25.7",
+    "@strapi/utils": "^4.25.7",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
