--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "develop": "strapi develop",
     "start": "NODE_ENV=production strapi start",
-    "build": "strapi build",
+    "build": "NODE_ENV=production strapi build",
     "strapi": "strapi",
     "deploy": "strapi deploy"
   },
